Avatar submission updates

--- a/src/index.html
+++ b/src/index.html
@@ -172,7 +172,7 @@
       </div>
     </div>
 
-    <div class="modal" id="edit-profile-modal">
+    <div class="modal" id="avatar-modal">
       <div class="modal__container">
         <button type="button" class="modal__close-btn"></button>
         <!--close button was added-->
@@ -183,15 +183,16 @@
             Avatar
             <input
               id="profile-avatar-input"
-              type="text"
+              name="avatar"
+              type="url"
               class="modal__input"
               placeholder="avatar goes here"
+              required
             />
             <span id="profile-avatar-input-error" class="modal__error"></span>
             <!--the corresponding input needs to have an "id" value with the same input-->
           </label>
           <button type="submit" class="modal__submit-btn">Save</button>
-
           <!--add close button now-->
         </form>
       </div>
