Updated modal and profile css

--- a/src/index.html
+++ b/src/index.html
@@ -175,14 +175,9 @@
     <div class="modal" id="edit-avatar-modal">
       <div class="modal__container">
         <button type="button" class="modal__close-btn">
-          <img
-            src=""
-            id="image-close"
-            alt="Close-icon"
-            class="modal__close-icon"
-          />
+          <img id="image-close" class="modal__close-icon" />
         </button>
-        <h2 class="modal__title">Edit Avatar</h2>
+        <h2 class="modal__title">Edit Profile Avatar</h2>
         <form
           id="edit-avatar-form"
           name="avatar"
