Code reviewer changes to submit button, wrong use of catch, check response, etc

--- a/src/index.html
+++ b/src/index.html
@@ -150,6 +150,7 @@
               required
               minlength="2"
               maxlength="30"
+              required
             />
             <span id="add-card-name-input-error" class="modal__error"></span>
             <!--the corresponding input needs to have an "id" value with the same input-->
